[gd_scene load_steps=6 format=3 uid="uid://f84twyg3pf4k"]

[ext_resource type="Script" path="res://Scripts/emeny_shooting.gd" id="1_25mvw"]
[ext_resource type="Texture2D" uid="uid://cimxd08utiagq" path="res://Images/enemy1.png" id="2_54spk"]
[ext_resource type="PackedScene" uid="uid://bx1qu7c56boqq" path="res://Scenes/enemy_interface.tscn" id="3_ye4jh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fnvt"]
size = Vector2(139.131, 133.565)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mx4r"]

[node name="Enemy_Shooting" type="Area2D"]
position = Vector2(584, 316)
scale = Vector2(0.359375, 0.359375)
collision_layer = 4
collision_mask = 67
script = ExtResource("1_25mvw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.19617e-05, 4.19617e-05)
scale = Vector2(0.434783, 0.434783)
texture = ExtResource("2_54spk")

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7fnvt")

[node name="EnemyView" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8mx4r")

[node name="Node2D" type="Node2D" parent="."]

[node name="BulletSpawn" type="Marker2D" parent="Node2D"]
position = Vector2(147.478, 0)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ReloadTime" type="Timer" parent="."]

[node name="Interface" parent="." instance=ExtResource("3_ye4jh")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="shot" from="." to="." method="_on_shot"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ReloadTime" to="." method="_on_reload_time_timeout"]
